Styling, JS Fixes, Read Sentence
Changed appearance a bit, JS becoming a bit clearer, added function trashcan and read sentence button

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ testing/index.html
 testing/script.js
 testing/style.css
 testing/test2.html
+testing/mk2/index.html
+testing/mk2/script.js
+testing/mk2/style.css
