--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-
-testing/index.html
 .DS_Store
-testing/script.js
-testing/style.css
-testing/test2.html
-testing/mk2/index.html
-testing/mk2/script.js
-testing/mk2/style.css
+old/
