--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@hello-pangea/dnd": "^16.5.0",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
