Correctly packages as electron app

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "kinderbuilder",
-  "main": "electron.js",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "main": "electron.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:vite\" \"wait-on http://localhost:5173 && electron .\"",
     "dev:vite": "vite",
@@ -17,9 +16,14 @@
       "output": "dist_electron"
     },
     "files": [
-      "dist/**/*",
       "electron.js"
     ],
+    "extraResources": [
+    {
+      "from": "dist",
+      "to": "dist"
+    }
+  ],
     "win": {
       "target": "nsis",
       "icon": "public/icon.ico"
@@ -52,7 +56,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8",
+    "vite": "^7.1.9",
     "wait-on": "^9.0.1"
   }
 }
